# DL4NLP-Chain-of-Thought-Prompting

./: .gitignore  README.md  benchmarks.yaml  benchmarks_rtx5090.yaml  benchmarks_rtx5090_saycan.yaml  draw.excalidraw  main.py  old_plots.7z  old_results.7z  pyproject.toml  run_eval.py  t5_benchmark_results.csv  test.py  visualize.py
archived_runs/: newSaycan_rtx5090_plots.7z  newSaycan_rtx5090_plots_20260628_170624.7z  old_saycan.7z  rtx5090_plots.7z
benchmarks/: aqua-rat.yaml  asdiv.yaml  coin_flip.yaml  commonsense_qa.yaml  date_understanding.yaml  gsm8k.yaml  last_letter_concatenation.yaml  letter_shift.yaml  mawps.yaml  saycan.yaml  sports_understanding.yaml  strategyqa.yaml  svamp.yaml
cots/: csqa.jsonl  date_understanding.jsonl  last_letter_concatenation.jsonl
data/: coin_flip_test.jsonl  date_understanding_test.jsonl  last_letter_concatenation_test.jsonl  letter_shift_test.jsonl  sports_understanding_test.jsonl
docs/: INSTRUCTIONS.md  models.md
eval/: archive.py  cli.py  runner.py  tasks.py
fewshot/: example-1.jsonl
fewshots_and_cots/: caveman_mode.jsonl  coin_flip.jsonl  contrastive_cot.jsonl  equation_only.jsonl  just_think.jsonl  letter_shift.jsonl  math_word_problems.jsonl  math_word_problems_aqua.jsonl  numbered_step_cot.jsonl  persona_cot.jsonl  saycan.jsonl  sports_understanding.jsonl  strategy_qa.jsonl  think_step_by_step.jsonl
fewshots_and_cots/aqua/: caveman_mode.jsonl  contrastive_cot.jsonl  equation_only.jsonl  numbered_step_cot.jsonl  (+3 more)
scripts/: generate_letter_shift_data.py  generate_symbolic_data.py
visualization/: main.py
(+3229 files in other folders)
