[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["eval", "visualization"]

[project]
name = "dl4nlp-chain-of-thought-prompting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "lm-eval[api]>=0.4.12",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "transformers>=5.12.1",
    "matplotlib>=3.9.0",
]

[project.scripts]
eval = "eval.cli:main"
visualize = "visualization.main:main"
